Name:           MyS
Version:        1.0
Synopsis:       A Warcraft III network hosting bot written in Haskell.
Description:    I love gaming, I love haskell. I decided to write a game server
                for the game Warcraft III. It is capable of running LAN games,
                as well as announcing them to Battle.net for online play.
Category:       Game

License:        GPL
License-file:   LICENSE
data-files:     README.mdown, gpl.txt

Author:         Kim Burgestrand
Maintainer:     kim@burgestrand.se

Stability:      alpha

Cabal-Version:  >= 1.2
Build-type:     Simple

Executable MyS
    main-is:        Main.hs
    hs-source-dirs: src/
    Build-Depends:  base,
                    time,
                    network,
                    old-locale,
                    stm,
                    bytestring,
                    containers,
                    binary == 0.5.0.2,
                    network-bytestring == 0.1.2.1,
                    hslogger == 1.0.7,
                    monadLib == 3.5.2
    
    other-modules:  Announcer,
                    Client,
                    Common,
                    Communication,
                    Configuration,
                    Server,
                    
                    Data.Table,
                    
                    Ext.Control.Concurrent,
                    Ext.Data.Binary,
                    Ext.Data.ByteString,
                    Ext.Data.List,
                    Ext.Network.Socket,
                    Ext.Text.Read,
                    
                    Network.BattleNet.Protocol,
                    Network.BattleNet.Packets,
                    
                    Util.Log,
                    Util.Ternary,
                    Util.WC3